Implemented main features
Added JwtAuthController.cs and AuthManager
Chaged FrontEnd structure and implemented authentication

--- a/AuthTest/AuthTest.csproj
+++ b/AuthTest/AuthTest.csproj
@@ -17,4 +17,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuthTest.DAL\AuthTest.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
